tests/baselines/reference/logicalOrExpressionIsContextuallyTyped.errors.txt
tests/cases/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts(6,33): error TS2339: Property 'b' does not exist on type '{ a: string; }'.
tests/cases/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts(6,54): error TS2339: Property 'b' does not exist on type '{ a: string; }'.


==== tests/cases/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrExpressionIsContextuallyTyped.ts (2 errors) ====
    // The || operator permits the operands to be of any type.
    // If the || expression is contextually typed, the operands are contextually typed by the
    // same type and the result is of the best common type of the contextual type and the two
    // operand types.
    
    var r: { a: string } = { a: '', b: 123 } || { a: '', b: true };
                                    ~
!!! error TS2339: Property 'b' does not exist on type '{ a: string; }'.
                                                         ~
!!! error TS2339: Property 'b' does not exist on type '{ a: string; }'.